--- a/reactapp/src/Komponente/Dokumenta/Comment.css
+++ b/reactapp/src/Komponente/Dokumenta/Comment.css
@@ -1,11 +1,17 @@
- 
 .comment {
-    border: 1px solid #ddd;
-    padding: 10px;
+    background-color: #f5f5f5;
+    padding: 15px;
     margin-bottom: 10px;
-  }
-  
-  .comment p {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 1em;
+    color: #333;
+}
+
+.comment p {
     margin: 5px 0;
-  }
-  
+}
+
+.comment strong {
+    color: #0288d1; 
+}
